Added manuever calculateion