@@ -5,20 +5,19 @@ import com.graphhopper.util.PointList;
 import com.graphhopper.util.details.PathDetail;
 import com.graphhopper.util.shapes.GHPoint3D;
 import com.wheelchair.mypath.model.Coordinate;
-import com.wheelchair.mypath.model.apiresponse.Point;
-import com.wheelchair.mypath.model.apiresponse.Response;
-import com.wheelchair.mypath.model.apiresponse.Route;
+import com.wheelchair.mypath.model.TurnDirection;
+import com.wheelchair.mypath.model.apiresponse.*;
 import com.wheelchair.mypath.utils.GeoUtils;
-import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-import static com.wheelchair.mypath.constants.Constants.ALLOWED_STRAIGHT_ANGLE;
-import static com.wheelchair.mypath.constants.Constants.DEGREE_360;
+import static com.wheelchair.mypath.constants.Constants.*;
 import static com.wheelchair.mypath.model.PathDetails.SURFACE;
+import static com.wheelchair.mypath.model.TurnDirection.STRAIGHT;
+import static com.wheelchair.mypath.utils.GeoUtils.*;
 import static com.wheelchair.mypath.utils.Utils.getSubArray;
 
 /**
@@ -37,7 +36,13 @@ public class NavigationService {
         Map<String, List<PathDetail>> pathDetails = responsePath.getPathDetails();
 
         List<Point> pointList = getPointListGroupedBySurface(coordinateList, pathDetails);
+
         pointList = processManeuverSegments(pointList);
+
+        processStartEnd(pointList);
+        processDistance(pointList);
+        processDuration(pointList);
+
 
         Route route = new Route();
         route.setPoints(pointList);
@@ -46,6 +51,22 @@ public class NavigationService {
         response.setRoutes(route);
 
         return response;
+    }
+
+    private List<Point> getPointListGroupedBySurface(List<Coordinate> coordinateList, Map<String, List<PathDetail>> pathDetails) {
+        List<PathDetail> surfaceList = pathDetails.get(SURFACE.getLabel());
+        List<Point> pointList = new ArrayList<>();
+
+        for (PathDetail pathDetail: surfaceList) {
+            Point point = new Point();
+
+            point.setSurface((String) pathDetail.getValue());
+            point.setPoints(getSubArray(coordinateList, pathDetail.getFirst(), pathDetail.getLast()));
+
+            pointList.add(point);
+        }
+
+        return pointList;
     }
 
     private List<Point> processManeuverSegments(List<Point> pointList) {
@@ -64,14 +85,16 @@ public class NavigationService {
                     Coordinate mid = coordinateList.get(i - 1);
                     Coordinate end = coordinateList.get(i);
 
-                    double headingChange = GeoUtils.calculateHeadingChange(start, mid, end);
+                    TurnDirection turnDirection = getTurnDirection(start, mid, end);
 
                     // taking a turn
-                    if (headingChange > ALLOWED_STRAIGHT_ANGLE && headingChange < (DEGREE_360 - ALLOWED_STRAIGHT_ANGLE)) {
+                    if (turnDirection == STRAIGHT ) {
+                        newPoint.addCoordinate(end);
+                    } else {
+                        newPoint.setManeuver(turnDirection.getLabel());
+
                         newPoint = createNewSegment(point, mid, end);
                         points.add(newPoint);
-                    } else {
-                        newPoint.addCoordinate(end);
                     }
                 }
             }
@@ -80,22 +103,49 @@ public class NavigationService {
         return points;
     }
 
-    private List<Point> getPointListGroupedBySurface(List<Coordinate> coordinateList, Map<String, List<PathDetail>> pathDetails) {
-        List<PathDetail> surfaceList = pathDetails.get(SURFACE.getLabel());
-        List<Point> pointList = new ArrayList<>();
-
-        for (PathDetail pathDetail: surfaceList) {
-            Point point = new Point();
-
-            point.setSurface((String) pathDetail.getValue());
-            point.setStart_location(coordinateList.get(pathDetail.getFirst()));
-            point.setEnd_location(coordinateList.get(pathDetail.getLast()));
-            point.setPoints(getSubArray(coordinateList, pathDetail.getFirst(), pathDetail.getLast()));
-
-            pointList.add(point);
+    private void processStartEnd(List<Point> points) {
+        for (Point point : points) {
+            List<Coordinate> coordinateList = point.getPoints();
+            point.setStart_location(coordinateList.get(0));
+            point.setEnd_location(coordinateList.get(coordinateList.size() - 1));
         }
+    }
 
-        return pointList;
+    private void processDistance(List<Point> points) {
+        Double distance = 0.0;
+
+        for (Point point : points) {
+            distance = 0.0;
+            List<Coordinate> coordinateList = point.getPoints();
+
+            for (int i = 1; i < coordinateList.size(); i++) {
+                distance += calcDistance(coordinateList.get(i - 1), coordinateList.get(i));
+            }
+
+            double distanceInMeter = distance * 1000;
+            double distanceInMi = distance * 0.621371;
+
+            Distance segmentDistance = new Distance();
+            segmentDistance.setValue(distanceInMeter);
+            segmentDistance.setType("meter");
+            segmentDistance.setText(String.format("%.2f", distanceInMi) + " mi");
+
+            point.setDistance(segmentDistance);
+        }
+    }
+
+    private void processDuration(List<Point> points) {
+        for (Point point : points) {
+            double timeInSecond = (point.getDistance().getValue() * 3600.0) / (1609.34 * AVG_SPEED);
+            double timeInMinue = timeInSecond / 60;
+
+            Duration duration = new Duration();
+            duration.setValue(timeInSecond);
+            duration.setType("second");
+            duration.setText(String.format("%.2f", timeInMinue) + " min");
+
+            point.setDuration(duration);
+        }
     }
 
     private Point createNewSegment(Point point, Coordinate coo1, Coordinate coo2) {
